# fcitx-tablet

./: CMakeLists.txt  README.md  tablet-lxbi-demo.m4v
data/: CMakeLists.txt  fcitx-tablet-ime.conf.in  fcitx-tablet-pen.conf.in  fcitx-tablet.conf.in  fcitx-tablet.desc  tablet.conf.in
rules/: 70-gotop.rules  70-lxbi.rules  CMakeLists.txt
src/: config.c  config.h  driver.h  engine.h  fork.c  ime.c  ime.h  line.c  line.h  lxbi.c  lxbi.h  pen.c  pen.h  point.h  recog.h  tablet.c  version.c  zinnia.c
src/drivers/: gotop.c  lxbi.c
src/engines/: fork.c  zinnia.c
utils/: CMakeLists.txt  gotop_calibrate.c
